syntax = "proto3";

package redpanda.api.dataplane.v1alpha1;

enum Reason {
  REASON_UNSPECIFIED = 0;
  REASON_FEATURE_NOT_CONFIGURED = 1;
  REASON_CONSOLE_ERROR = 2;
  REASON_REDPANDA_ADMIN_API_ERROR = 3;
  REASON_KAFKA_API_ERROR = 4;
  REASON_KAFKA_CONNECT_API_ERROR = 5;
  REASON_TYPE_MAPPING_ERROR = 6;
  REASON_SECRET_STORE_ERROR = 7;
}
